--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-    "DefaultConnection": "Host=db-postgres;Database=meutccdb;Username=postgres;Password=mysecretpassword"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=meutccdb;Username=postgres;Password=mysecretpassword"
   }
 }
