--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,48 @@
 services:
-  # Serviço da sua aplicação ASP.NET Core
+  
   meu-app-web:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: meu-tcc-app
     ports:
-      - "8080:8080" # Mapeia a porta 8080 do seu PC para a 8080 do container
+      - "8080:8080" 
       - "8081:8081"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080;https://+:8081
       # Configuração para aceitar o certificado de desenvolvimento do Docker
-      # - ASPNETCORE_Kestrel__Certificates__Default__Password=mysecretpassword
-      # - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=mysecretpassword
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
     volumes:
-      - ~/.aspnet/https:/https/:ro # Mapeia o certificado de dev local para o container
+      - ~/.aspnet/https:/https/:ro 
     depends_on:
-      - db-postgres # Garante que o banco de dados inicie antes da aplicação
+      - db-postgres 
 
-  # Serviço do Banco de Dados PostgreSQL
+  
   db-postgres:
-    image: postgres:15 # Usa a imagem oficial do Postgres
+    image: postgres:15 
     container_name: meu-tcc-db
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=mysecretpassword
       - POSTGRES_DB=meutccdb
     ports:
-      - "5432:5432" # Expõe a porta do Postgres para você poder conectar com um cliente de BD
+      - "5432:5432" 
     volumes:
-      - postgres-data:/var/lib/postgresql/data # Garante que os dados persistam
+      - postgres-data:/var/lib/postgresql/data 
 
-  # pg-admin:
-  #   image: pg
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: meu-tcc-pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db-postgres
 
 volumes:
-  postgres-data: # Define o volume para persistência dos dados do banco
+  postgres-data: 
